# My_GUI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  proj.sh  run.sh  vcpkg.json
docs/: rambling.md  todo.md
include/: shader.hpp  text_renderer.hpp  ui_button.hpp
include/My_GUI/core/: vao.hpp  window.hpp
include/My_GUI/widgets/: ui_button.hpp
res/shaders/: buttonVert.glsl  textVert.glsl
shaders/: simpleVert.glsl
src/: main.cpp  shader.cpp  shader.hpp  text_renderer.cpp  ui_button.cpp  window.cpp  window.hpp
src/core/: shader.cpp  text_renderer.cpp  vao.cpp  window.cpp
src/widgets/: ui_button.cpp
tests/: CMakeLists.txt  test_example.cpp
